Done Render Sidebar and Banner Top

--- a/styles/components/components.css
+++ b/styles/components/components.css
@@ -172,6 +172,10 @@
   background-color: var(--bg-hover);
 }
 
+.library-item > * {
+  pointer-events: none;
+}
+
 .item-image {
   width: 48px;
   height: 48px;
