--- a/styles/partial/sidebar.css
+++ b/styles/partial/sidebar.css
@@ -1,4 +1,14 @@
 /* Sidebar */
+.wrap__sidebar {
+  height: 100%;
+  flex: 1;
+}
+
+.tabza__panels {
+  overflow: auto;
+  height: 100%;
+}
+
 .sidebar {
   width: 360px;
   background-color: var(--bg-secondary);
@@ -16,4 +26,5 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-md);
+  height: 100%;
 }
