--- a/styles/global.css
+++ b/styles/global.css
@@ -2,7 +2,11 @@
 @import "./base/variables.css";
 @import "./components/components.css";
 @import "./components/layout.css";
+@import "./components/toast.css";
 @import "./partial/sidebar.css";
 @import "./partial/header.css";
+@import "./partial/footer.css";
+@import "./partial/content-wrapper.css";
 @import "./utils/responsive.css";
 @import "./lib/tabza.css";
+@import "./lib/lopza.css";
